--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,6 @@ jdk:
 - oraclejdk8
 
 sudo: false
-addons:
-  apt:
-    packages:
-    - graphviz
 
 cache:
   directories:
@@ -16,7 +12,7 @@ cache:
   - "$HOME/.sbt/boot/"
 
 script:
-- sbt ++$TRAVIS_SCALA_VERSION validate
+- sbt ++$TRAVIS_SCALA_VERSION mdocValidate
 after_success:
 - bash <(curl -s https://codecov.io/bash)
 - |
